Introduce separate DTO/view model from domain object for dogs
